# Self-Rewarding-Language-Models

./: pyproject.toml  setup.sh
src/train/: train.py
src/utils/: ConfigLoader.py  ModelLoader.py  create_sft_dataset.py  generate_dpo_dataset.py  generate_preferences.py  generate_prompts.py  generate_responses.py  generate_scores.py  read_write_jsonl.py
src/utils/Trainer/: DPOTrainer.py  SFTTrainer.py
src/utils/logging/: color_formatter.py  logging_config.py
